tests/snapshots/regression-ancillary_repair-both_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Vexor
ship/capacitorStablePercentage               = 0.000000
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 6.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 19.200000
ship/passiveShieldEffectiveRechargeRate      = 5.057471
ship/passiveShieldRechargeRate               = 3.666667
ship/shieldEffectiveBoostRate                = 67.126436
ship/armorEffectiveRepairRate                = 102.222225
ship/shieldBoostRate                         = 48.666667
ship/armorRepairRate                         = 69.000000
ship/ehp                                     = 9331.598693
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 1896.551701
ship/hullEhp                                 = 3731.343191
ship/armorEhp                                = 3703.703802
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 743.000000
ship/cpuFree                                 = 300.000000
ship/capacitorDepletesIn                     = 216.000000
ship/capacitorPeakDeltaPercentage            = -41.977011
ship/capacitorPeakDelta                      = -5.256189
ship/capacitorPeakLoad                       = 17.777778
ship/capacitorPeakRecharge                   = 12.521589
ship/alignTime                               = 5.816614
ship/hp                                      = 2500.000000
ship/powerOutput                             = 875.000000
ship/powerLoad                               = 132.000000
ship/maxVelocity                             = 243.750000
ship/cpuOutput                               = 375.000000
ship/cpuLoad                                 = 75.000000
ship/rechargeRate                            = 361875.000000
ship/agility                                 = 0.378000
ship/maxTargetRange                          = 65625.000000
ship/scanSpeed                               = 4125.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanMagnetometricStrength               = 19.200000
ship/shieldCapacity                          = 1375.000000
ship/armorHP                                 = 2500.000000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 937500.000000
ship/capacitorCapacity                       = 1812.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 350.000000
ship/shipBonusGC2                            = 50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

medium_1/type                     = Medium Ancillary Shield Booster
medium_1/state                    = active
medium_1/capacitorInjectionAmount = 100.000000
medium_1/shieldBoostRate          = 48.666667
medium_1/chargeAmount             = 3.500000
medium_1/cycleTime                = 3000.000000
medium_1/capacitorNeed            = 0.000000
medium_1/heatDamage               = 0.975000
medium_1/charge/type              = Cap Booster 100

low_1/type                           = Medium Ancillary Armor Repairer
low_1/state                          = active
low_1/armorRepairRate                = 69.000000
low_1/chargeAmount                   = 32.000000
low_1/capacitorPeakLoad              = 17.777778
low_1/cycleTime                      = 9000.000000
low_1/duration                       = 9000.000000
low_1/armorDamageAmount              = 621.000000
low_1/heatDamage                     = 3.975000
low_1/charge/type                    = Nanite Repair Paste
low_1/charge/chargedRepairMultiplier = 3.000000
