tests/snapshots/regression-ancillary_repair-shield_loaded_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Caracal
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 16.000000
ship/passiveShieldEffectiveRechargeRate      = 4.689655
ship/passiveShieldRechargeRate               = 3.400000
ship/shieldEffectiveBoostRate                = 67.126436
ship/shieldBoostRate                         = 48.666667
ship/ehp                                     = 6212.157530
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.137500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 2344.827557
ship/hullEhp                                 = 2089.552187
ship/armorEhp                                = 1777.777786
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 618.000000
ship/cpuFree                                 = 380.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 7.022472
ship/capacitorPeakRecharge                   = 7.022472
ship/alignTime                               = 7.760060
ship/powerLoad                               = 12.000000
ship/cpuLoad                                 = 50.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusCC2                            = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

medium_1/type                     = Medium Ancillary Shield Booster
medium_1/state                    = active
medium_1/capacitorInjectionAmount = 100.000000
medium_1/shieldBoostRate          = 48.666667
medium_1/chargeAmount             = 3.500000
medium_1/cycleTime                = 3000.000000
medium_1/capacitorNeed            = 0.000000
medium_1/charge/type              = Cap Booster 100

ship                                     = skill Caldari Cruiser needs 1 has 0
medium_1/Medium Ancillary Shield Booster = skill Shield Operation needs 2 has 0
